Completed the Ajax and Extend Modules

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
         <title>Puzzles</title>
         <meta name="description" content="">
+        <!--
         <meta name="viewport" content="width=device-width; initial-scale=1.0">
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
+        <link href="public/css/engine.css" type="text/css" rel="stylesheet"/>
         <script data-main="scripts/config" src="scripts/vendor/require.js" type="text/javascript"></script>
     </head>
     <body>
@@ -18,8 +20,9 @@
             
            <div id="main">
                <canvas id="stage"></canvas>
+                
            </div>
-            <footer>
+           <footer>
                 <p>
                     &copy; Copyright  by Michael Malone
                 </p>
